ghc-4335c07/testsuite/tests/indexed-types/should_compile/ClassEqContext3.hs
{-# LANGUAGE TypeFamilies #-}
{-# LANGUAGE MultiParamTypeClasses #-}

module ClassEqContext  where 

class a ~ b => C a b

instance C Char Char
